--- a/app/styles/store/store.css
+++ b/app/styles/store/store.css
@@ -1,19 +1,3 @@
-button.btn-add {
-    display: flex;
-    float: right;
-    height: 35px;
-    position: absolute;
-    right: 60px;
-    align-items: center;
-    padding: 20px;
-    background-color: #abf3ae;
-}
-
-button:hover {
-    background-color:  var(--button-background-color) ;
-}
-/* --button-background-color: #4CAF50;
-    --button-hover-background-color: #72da76; */
 div.store {
     display: flex;
     flex-direction: row;
@@ -61,4 +45,20 @@ div.info p {
     border: 2px;
     box-shadow: 0 0 1px #0003, 0 5px 2px #0003;
     justify-content: space-around;
+}
+
+.add-product {
+    display: flex;
+    color: black;
+    float: right;
+    position: absolute;
+    right: 60px;
+    padding: 10px;
+    border-radius: 10px;
+    width: 50px;
+    background-color: #abf3ae;
+}
+
+.add-product:hover {
+    background-color: var(--button-background-color);
 }
