--- a/app/components/productCard/product.css
+++ b/app/components/productCard/product.css
@@ -1,6 +1,7 @@
 div.contentproduct .card {
     background-color: white;
     display: flex;
+    position: relative;
     flex-direction: column-reverse;
     align-items: center;
     border: 1px solid gray;
@@ -27,9 +28,8 @@ div.contentproduct img.disabled {
 }
 
 
-div.contentproduct div.name-product:hover {
-    background-color: #000000dc;
-    cursor: pointer;
+.card:hover div.name-product {
+    background-color: #000000b7;
 }
 
 .contentproduct a {
@@ -46,13 +46,14 @@ div.name-product {
     align-content: center;
     align-items: center;
     justify-content: center;
-    background-color: #000000a8;
+    background-color: #0000008f;
     padding-bottom: 0.5rem;
     margin-top: 0.5rem;
-    position: relative;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    left: 0px;
     z-index: +1;
 }
 
@@ -60,5 +61,4 @@ div.name-product {
     max-width: 200px;
     height: auto;
     border-radius: 10px;
-    margin-bottom: -30px
 }
