--- a/app/components/productCard/product.css
+++ b/app/components/productCard/product.css
@@ -1,16 +1,27 @@
+.contentproduct {
+    padding-bottom: 35px;
+}
+
+button {
+    position: absolute;
+    left: 0px;
+    bottom: -40px;
+}
+
 div.contentproduct .card {
     background-color: white;
     display: flex;
     position: relative;
-    flex-direction: column-reverse;
+    /* flex-direction: column-reverse; */
     align-items: center;
     border: 1px solid gray;
     box-shadow: 0px 0px 5px gray;
     border-radius: 10px;
     transition: transform .2s;
     margin: 1rem;
+    margin-top: 4rem;
 }
-
+  
 div.contentproduct .card:hover {
     transform: scale(1.1);
 }
@@ -55,6 +66,18 @@ div.name-product {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     z-index: +1;
+}
+
+div.contentproduct .cart {
+   
+    color: black;
+    
+}
+
+div.contentproduct .cart :hover {
+    background-color: #000000b7;
+    color: white;
+    
 }
 
 .contentproduct img {
